--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
       <plugin>
 	<groupId>com.theoryinpractise</groupId>
 	<artifactId>clojure-maven-plugin</artifactId>
-	<version>1.3.15</version>
+	<version>1.3.16-SNAPSHOT</version>
 	<extensions>true</extensions>
       </plugin>
     </plugins>
